ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-calc-ingress
  namespace: simple-calc-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: simple-calc.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-calc-service
            port:
              number: 80
